--- a/junctspace_dump.yaml
+++ b/junctspace_dump.yaml
@@ -70,6 +70,7 @@ components:
         works_in_atmo: true
         landing_bad_idea: false
   thermal_rocket:
+    name: "Thermal Rocket"
     type: "engine"
     density: 1
     durability: 5
@@ -87,6 +88,7 @@ components:
         works_in_atmo: true
         landing_bad_idea: false
   electric_rocket:
+    name: "Electric Rocket"
     type: "engine"
     density: 1
     durability: 2 
@@ -104,6 +106,7 @@ components:
         works_in_atmo: false
         landing_bad_idea: false
   thermo_electric_rocket:
+    name: "Thermo-Electric Rocket"
     type: "engine"
     density: 1
     durability: 4
@@ -116,6 +119,7 @@ components:
           HEAT: 5
           ENERGY: 10
   orion_drive:
+    name: "Orion Drive"
     type: "engine"
     density: 8
     durability: 8
@@ -150,6 +154,7 @@ components:
           HEAT: 4
         works_in_atmo: false
   fissile_salt_water:
+    name: "Fissile Salt Water Drive"
     type: "engine"
     density: 6
     durability: 6
@@ -166,6 +171,7 @@ components:
         works_in_atmo: true
         landing_bad_idea: true
   fusion_torch:
+    name: "Fusion Torch"
     type: "engine"
     density: 1
     durability: 1
