--- a/junctspace_dump.yaml
+++ b/junctspace_dump.yaml
@@ -911,7 +911,8 @@ components:
         strategic:
           base: 4
           per_volume: 2
-      missile_vls:
+      weapon_guided:
+        launch_method: vls
         size: heavy
         active:
           ENERGY: -1
@@ -926,7 +927,8 @@ components:
         strategic:
           base: 3
           per_volume: 1
-      missile_catapult:
+      weapon_guided:
+        launch_method: magazine
         size: light
         active:
           ENERGY: -1
@@ -940,7 +942,8 @@ components:
         strategic:
           base: 5
           per_volume: 1
-      missile_catapult:
+      weapon_guided:
+        launch_method: magazine
         size: light
         active:
           ENERGY: -4
@@ -954,7 +957,8 @@ components:
         strategic:
           base: 3
           per_volume: 2
-      missile_vls:
+      weapon_guided:
+        launch_method: vls
         size: heavy
         active:
           ENERGY: -1
@@ -968,7 +972,8 @@ components:
         strategic:
           base: 2
           per_volume: 1
-      missile_catapult:
+      weapon_guided:
+        launch_method: magazine
         size: heavy
         active:
           ENERGY: -1
@@ -982,7 +987,8 @@ components:
         strategic:
           base: 5
           per_volume: 1
-      missile_catapult:
+      weapon_guided:
+        launch_method: magazine
         size: heavy
         active:
           ENERGY: -8
