model which doesn't break both python and js dicts

--- a/junctspace_dump.yaml
+++ b/junctspace_dump.yaml
@@ -816,11 +816,17 @@ combat_stations:
         min_morale: 4
         buff:
           add: {repair: 0.12}
-      - specific_crew: {[biological, construct]: 50}
+      - specific_crew:
+        - type: [biological, construct]
+          amount: 50
         min_morale: 4
         buff:
           add: {repair: 0.14}
-      - specific_crew: {biological: 50, construct: 50}
+      - specific_crew: 
+        - type: biological
+          amount: 50
+        - type: construct
+          amount: 50
         min_morale: 6
         buff:
           add: {repair: 0.15}
